# CameraSystemCalibration

./: .gitignore  CMakeLists.txt  CameraSystemCalibration.kdev4  README.md  calibrate_example.cpp  camera.cpp  camera.h  camera_calibration.cpp  camera_calibration.h  camera_system_calibration.cpp  camera_system_calibration.h  optimization_structs.h  structs.h  utils.cpp  utils.h  video_clip.cpp  video_clip.h  video_synchronizer.cpp  video_synchronizer.h
.kdev4/: CameraSystemCalibration.kdev4
example_data/: calibration_result.yaml  calibration_setting.yaml  detector_setting.yaml  mono_calibration.yaml
example_data/Results/: InteriorOrientationFisheye0.yaml  InteriorOrientationFisheye1.yaml  InteriorOrientationFisheye2.yaml  InteriorOrientationFisheye3.yaml  MultiCamSys_Calibration.yaml  calibration_result.yaml
examples/: calibrate_example
